update taskk qlus qlpb qlcv ql project => them crud

--- a/tailwind/src/App.css
+++ b/tailwind/src/App.css
@@ -73,3 +73,7 @@
   -moz-animation: xoayvong 2s linear 0s infinite;
   -o-animation: xoayvong 2s linear 0s infinite; 
 }
+#hoverCreateAnh:hover #createAnh{
+  display: block;
+  /* background-color: green; */
+}
